# parconc

./: flake.nix  hie.yaml  parconc.cabal  scripts.nix
app/: Main.hs
app/CH7/: Chan.hs  Logger.hs  MVar.hs  PrintAB.hs  Reminders.hs
app/CH8/: AsyncAwait.hs  Merge.hs
experiments/Challenges/: Philosophers.hs
experiments/Challenges/Mentoring/: Core.hs  DBClient.hs  DBPool.hs
experiments/Challenges/Philosophers/: MVar.hs  STM.hs
src/CH10/: WindowManager.hs
src/CH11/: Async.hs
src/CH7/: Chan.hs  MVar.hs  PrintAB.hs  Reminders.hs
src/CH8/: AsyncAwaitExcept.hs  GetURLs.hs  Merge.hs
src/CH9/: AsyncAwait.hs  AsyncExceptions.hs  Chan.hs  Timeout.hs
test/Challenges/Mentoring/: DBPoolSpec.hs
testMain/: Main.hs
