cabal-version: 2.2

name:           parconc
version:        0
-- synopsis:       $synopsis
-- description:    $description
-- category:       $category
-- homepage:       $gitrepo#readme
-- bug-reports:    $gitrepo/issues
-- maintainer:     $maintainer
build-type:     Simple

-- source-repository head
--   type: git
--   location: $gitrepo

common common-opts
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleInstances
    FlexibleContexts
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

  build-depends:
      base

  default-language: Haskell2010

library
  import: common-opts
  exposed-modules:
    CH7.Chan
    CH7.Logger
    CH7.MVar
    CH7.PrintAB
    CH7.Reminders
    CH8.AsyncAwait
    CH8.AsyncAwaitExcept
    CH8.GetURLs
    CH8.Merge
    CH9.AsyncExceptions
    CH9.Chan
    CH9.Timeout
  build-depends:
      bytestring
    , http-client
    , http-client-tls
    , timeit
  hs-source-dirs:
    src

executable parconc
  import: common-opts
  main-is: Main.hs
  build-depends:
    parconc
  ghc-options:
    -Wall
    -threaded
    -rtsopts
    -with-rtsopts=-N
  hs-source-dirs:
    app

test-suite test
  import: common-opts
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  build-depends:
    , parconc
    , QuickCheck
    , hspec
    , hspec-expectations
    , hspec-discover
