cabal-version: 2.2
name:          parconc
version:       0

-- synopsis:       $synopsis
-- description:    $description
-- category:       $category
-- homepage:       $gitrepo#readme
-- bug-reports:    $gitrepo/issues
-- maintainer:     $maintainer
build-type:    Simple

-- source-repository head
--   type: git
--   location: $gitrepo

common common-opts
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    ConstraintKinds
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeOperators

  build-depends:
    , base
    , bytestring
    , text

  default-language:   Haskell2010
  ghc-options:        -Wall -fdefer-typed-holes -fwrite-ide-info

library
  import:          common-opts
  exposed-modules:
    CH10.WindowManager
    CH11.Async
    CH7.Chan
    CH7.Logger
    CH7.MVar
    CH7.PrintAB
    CH7.Reminders
    CH8.AsyncAwait
    CH8.AsyncAwaitExcept
    CH8.GetURLs
    CH8.Merge
    CH9.AsyncExceptions
    CH9.Chan
    CH9.Timeout

  build-depends:
    , bytestring
    , containers
    , http-client
    , http-client-tls
    , stm
    , timeit

  hs-source-dirs:  src

-- cabal-fmt: expand src/experiments
library experiments
  import:          common-opts
  exposed-modules:
    Challenges.Mentoring.Core
    Challenges.Mentoring.DBClient
    Challenges.Mentoring.DBPool
    Challenges.Philosophers.MVar
    Challenges.Philosophers.STM

  build-depends:
    , async
    , containers
    , stm
    , vector

  hs-source-dirs:  experiments

executable parconc
  import:         common-opts
  main-is:        Main.hs
  build-depends:
    , async
    , experiments
    , stm

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs: app

test-suite test
  import:         common-opts
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test testMain

  -- cabal-fmt: expand test
  other-modules:
    Challenges.Mentoring.DBPoolSpec
    Spec

  build-depends:
    , experiments
    , uuid
    , stm
    , hspec
    , hspec-core
    , hspec-discover
    , hspec-expectations
    , QuickCheck
